k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk031-ask-mento
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk031-ask-mento
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: e57cdcf9a8dec62f786adea9f000cd9c
      labels:
        app: sk031-ask-mento
    spec:
      serviceAccountName: default
      containers:
      - name: ask-mento
        image: amdp-registry.skala-ai.com/skala25a/sk031-ask-mento:1.0.0-7-89fbd9efc39e
        imagePullPolicy: Always
