k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk031-ask-mento-fe
  namespace: skala-practice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk031-ask-mento-fe.skala25a.project.skala-ai.com
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: sk031-ask-mento-be    # 백엔드 서비스 이름
              port:
                number: 8080              # 백엔드 서비스 포트

        - path: /
          pathType: Prefix
          backend:
            service:
              name: sk031-ask-mento-fe    # 프론트엔드 서비스 이름
              port:
                number: 8080
  tls:
  - hosts:
      - sk031-ask-mento-fe.skala25a.project.skala-ai.com
    secretName: sk031-cm-auto-tls-secret
